fixed layout on mobile

--- a/index.html
+++ b/index.html
@@ -51,47 +51,47 @@
 				<div class="project row">
 					<div class="col-12 col-md-6">
 						<div class="row">
-							<div class="col-3">
+							<div class="col-3 center">
 								<img src="images/spotify.png" alt="spotify" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>Tempo</h3>
-								<ul style="position:relative; display:flex; flex-wrap:wrap; padding:0; margin-bottom: 10px; list-style: none;">
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">Python requests</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">SQLite</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">Jinja</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">C/C++</li>
+								<ul class="tools-list">
+									<li>Python requests</li>
+									<li>SQLite</li>
+									<li>Jinja</li>
+									<li>C/C++</li>
 								</ul>
-								<ul class="actions small">
-									<li><a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Demo</a></li>
-									<li><a target=_blank href="writeup.md.html" class="button small">Writeup</a></li>
-								</ul>
+								<div class="buttons">
+									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Demo</a>
+									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
+								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row description-text">
 							<p>A fitness device that tracks a user’s running speed, retrieves a song from Spotify’s API matching the tempo and their stored music preferences, and plays that song to the user’s device.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="row">
-							<div class="col-3">
+							<div class="col-3 center">
 								<img src="images/covid.png" alt="spotify" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>COVID-19 Data Analysis</h3>
-								<ul style="position:relative; display:flex; flex-wrap:wrap; padding:0; margin-bottom: 10px; list-style: none;">
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">Python</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">pandas</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">numpy</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">matplotlib</li>
+								<ul class="tools-list">
+									<li>Python</li>
+									<li>pandas</li>
+									<li>numpy</li>
+									<li>matplotlib</li>
 								</ul>
-								<ul class="actions small">
-									<li><a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a></li>
-									<li><a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a></li>
-								</ul>
+								<div class="buttons">
+									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
+									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
+								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row description-text">
 							<p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
 						</div>
 					</div>
@@ -99,46 +99,46 @@
 				<div class="project row">
 					<div class="col-12 col-md-6">
 						<div class="row">
-							<div class="col-3">
+							<div class="col-3 center">
 								<img src="images/utensils.png" alt="utensils" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>Recipe Saver</h3>
-								<ul style="position:relative; display:flex; flex-wrap:wrap; padding:0; margin-bottom: 10px; list-style: none;">
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">MongoDB</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">Express</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">React</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">Node JS</li>
+								<ul class="tools-list">
+									<li>MongoDB</li>
+									<li>Express</li>
+									<li>React</li>
+									<li>Node JS</li>
 								</ul>
-								<ul class="actions small">
-									<li><a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small">Demo</a></li>
-									<li><a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a></li>
-								</ul>
+								<div class="buttons">
+									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small">Demo</a>
+									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
+								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row description-text">
 							<p>A full-stack CRUD application that allows the user to view, add, edit, and delete recipes.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
 						<div class="row">
-							<div class="col-3">
+							<div class="col-3 center">
 								<img src="images/tetris.png" alt="tetris" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>Tetris</h3>
-								<ul style="position:relative; display:flex; flex-wrap:wrap; padding:0; margin-bottom: 10px; list-style: none;">
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">HTML5</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">CSS3</li>
-									<li style="white-space: nowrap; padding: 0; font-size: 14px; color: rgb(136,146,176); margin-right: 20px; margin-bottom: 7px;">JavaScript</li>
+								<ul class="tools-list">
+									<li>HTML5</li>
+									<li>CSS3</li>
+									<li>JavaScript</li>
 								</ul>
-								<ul class="actions small">
-									<li><a target=_blank href="https://htmlpreview.github.io/?https://github.com/anniebryan/tetris/blob/master/index.html" class="button small">Demo</a></li>
-									<li><a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a></li>
-								</ul>
+								<div class="buttons">
+									<a target=_blank href="https://htmlpreview.github.io/?https://github.com/anniebryan/tetris/blob/master/index.html" class="button small">Demo</a>
+									<a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a>
+								</div>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row description-text">
 							<p>The classic game of Tetris for the web browser.</p>
 						</div>
 					</div>
