improved readability of header section

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 			<section id="about" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 					<h1>Annie Bryan</h1>
-					<p>I am a third-year undergraduate at MIT studying Computer Science and Engineering.</p>
+					<h3 id="add-margin-bottom">I am a third-year undergraduate at MIT studying Computer Science and Engineering.</h3>
 					<ul class="actions">
-						<li><a target="_blank" href="Annie_Bryan_Resume.pdf" class="button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
-						<li><a href="#projects" class="button scrolly">Projects</a></li>
+						<li><a target="_blank" href="Annie_Bryan_Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
+						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
 					</ul>
 				</div>
 			</section>
 
 			<!-- Projects -->
 			<section id="projects" class="wrapper style2 spotlights">
-				<div class="project row">
+				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-3 center">
@@ -95,8 +95,6 @@
 							<p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
 						</div>
 					</div>
-				</div>
-				<div class="project row">
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-3 center">
