--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>A fitness device that tracks a user’s running speed, retrieves a song from Spotify’s API matching the tempo and their stored music preferences, and plays that song to the user’s device.</p>
+							<p>A fitness device that tracks a user’s running speed, retrieves a song from Spotify’s API matching the tempo and their stored music preferences, and plays that song to the user’s authenticated device.</p>
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
