--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h1>Annie Bryan</h1>
 					<h3 id="add-margin-bottom">I am a third-year undergraduate at MIT studying Computer Science and Engineering.</h3>
 					<ul class="actions">
-						<li><a target="_blank" href="Annie_Bryan_Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
+						<li><a target=_blank href="Annie_Bryan_Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
 					</ul>
 				</div>
@@ -49,6 +49,30 @@
 			<!-- Projects -->
 			<section id="projects" class="wrapper style2 spotlights">
 				<div class="project row" style="margin-right: 0px;">
+					<div class="col-md-3"></div>
+					<div class="col-12 col-md-6">
+						<div class="row">
+							<div class="col-3 center">
+								<img src="images/csail.png" alt="spotify" data-position="center center" width=100%>
+							</div>
+							<div class="col-9">
+								<h3>Interlock for Self-Driving Cars</h3>
+								<ul class="tools-list">
+									<li>Python</li>
+									<li>CARLA</li>
+								</ul>
+								<div class="buttons">
+									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
+									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
+									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
+								</div>
+							</div>
+						</div>
+						<div class="row description-text">
+							<p>Collaborating with Toyota Research Institute to develop certified control, a new architecture for dependable self-driving cars</p>
+						</div>
+					</div>
+					<div class="col-md-3"></div>
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-3 center">
@@ -253,9 +277,9 @@
 								<li>
 									<a href="mailto:annieb22@mit.edu">annieb22@mit.edu</a>
 									<ul class="icons">
-										<li><a target="_blank" href="https://github.com/anniebryan" class="icon brands fa-2x fa-github"><span class="label">GitHub</span></a></li>
-										<li><a target="_blank" href="https://stackoverflow.com/story/anniebryan" class="icon brands fa-2x fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
-										<li><a target="_blank" href="https://www.linkedin.com/in/annie-bryan/" class="icon brands fa-2x fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a target=_blank href="https://github.com/anniebryan" class="icon brands fa-2x fa-github"><span class="label">GitHub</span></a></li>
+										<li><a target=_blank href="https://stackoverflow.com/story/anniebryan" class="icon brands fa-2x fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
+										<li><a target=_blank href="https://www.linkedin.com/in/annie-bryan/" class="icon brands fa-2x fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="mailto:annieb22@mit.edu" class="icon fa-2x fa-envelope"><span class="label">annieb22@mit.edu</span></a></li>
 									</ul>
 								</li>
