adjusted spacing of project rows

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 									<li>Python</li>
 									<li>CARLA</li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 center">
 								<div class="buttons">
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
 									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
@@ -69,10 +73,14 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>Collaborating with Toyota Research Institute to develop certified control, a new architecture for dependable self-driving cars</p>
+							<div class="col-12 justify">
+								<p>Collaborating with Toyota Research Institute to develop certified control, a new architecture for dependable self-driving cars</p>
+							</div>
 						</div>
 					</div>
 					<div class="col-md-3"></div>
+				</div>
+				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-3 center">
@@ -86,6 +94,10 @@
 									<li>Jinja</li>
 									<li>C/C++</li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 center">
 								<div class="buttons">
 									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Demo</a>
 									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
@@ -93,7 +105,9 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>A fitness device that tracks a user’s running speed, retrieves a song from Spotify’s API matching the tempo and their stored music preferences, and plays that song to the user’s authenticated device.</p>
+							<div class="col-12 justify">
+								<p>A fitness device that tracks a user’s running speed, retrieves a song from Spotify’s API matching the tempo and their stored music preferences, and plays that song to the user’s authenticated device.</p>
+							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
@@ -109,6 +123,10 @@
 									<li>numpy</li>
 									<li>matplotlib</li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 center">
 								<div class="buttons">
 									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
@@ -116,9 +134,13 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
+							<div class="col-12 justify">
+								<p>Cleaning and exploring the Johns Hopkins COVID-19 dataset and building models to analyze the effects of state-imposed stay-at-home policy.</p>
+							</div>
 						</div>
 					</div>
+				</div>
+				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
 						<div class="row">
 							<div class="col-3 center">
@@ -132,6 +154,10 @@
 									<li>React</li>
 									<li>Node JS</li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 center">
 								<div class="buttons">
 									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
@@ -139,7 +165,9 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>A full-stack CRUD application that allows the user to view, add, edit, and delete recipes.</p>
+							<div class="col-12 justify">
+								<p>A full-stack CRUD application that allows the user to view, add, edit, and delete recipes.</p>
+							</div>
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
@@ -154,6 +182,10 @@
 									<li>CSS3</li>
 									<li>JavaScript</li>
 								</ul>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-12 center">
 								<div class="buttons">
 									<a target=_blank href="https://htmlpreview.github.io/?https://github.com/anniebryan/tetris/blob/master/index.html" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a>
@@ -161,7 +193,9 @@
 							</div>
 						</div>
 						<div class="row description-text">
-							<p>The classic game of Tetris for the web browser.</p>
+							<div class="col-12 justify">
+								<p>The classic game of Tetris for the web browser.</p>
+							</div>
 						</div>
 					</div>
 				</div>
