--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 								<div class="col-6">
 									<ul class="dash">
 										<li>Ruby on Rails</li>
+										<li>PHP/Hack</li>
 										<li>MySQL</li>
 										<li>MongoDB</li>
 									</ul>
