--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<section id="about" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 					<h1>Annie Bryan</h1>
-					<h3 id="add-margin-bottom">I am a third-year undergraduate at MIT studying Computer Science and Engineering.</h3>
+					<h3 id="add-margin-bottom">I am a rising fourth-year undergraduate at MIT studying Computer Science and Mathematical Economics.</h3>
 					<ul class="actions">
 						<li><a target=_blank href="Annie_Bryan_Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
