--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 							<div class="row">
 								<div class="col-6">
 									<ul class="dash">
+										<li>Stata</li>
 										<li>MATLAB</li>
 										<li>Julia</li>
 										<li>R</li>
