--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			<section id="about" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 					<h1>Annie Bryan</h1>
-					<h3 id="add-margin-bottom">I am a rising fourth-year undergraduate at MIT studying Computer Science and Mathematical Economics.</h3>
+					<h3 id="add-margin-bottom">I am a fourth-year undergraduate at MIT studying Computer Science and Mathematical Economics.</h3>
 					<ul class="actions">
-						<li><a target=_blank href="Annie_Bryan_Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
+						<li><a target=_blank href="Resume-Annie-Bryan.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
 					</ul>
 				</div>
@@ -99,7 +99,7 @@
 						<div class="row">
 							<div class="col-12 center">
 								<div class="buttons">
-									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Demo</a>
+									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Video</a>
 									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
 								</div>
 							</div>
@@ -283,6 +283,7 @@
 									<ul class="dash">
 										<li>Git</li>
 										<li>Perforce</li>
+										<li>Mercurial</li>
 									</ul>
 								</div>
 							</div>
