condensed resume to one page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<h1>Annie Bryan</h1>
 					<h3 id="add-margin-bottom">I am a fourth-year undergraduate at MIT studying Computer Science and Mathematical Economics.</h3>
 					<ul class="actions">
-						<li><a target=_blank href="Resume-Annie-Bryan.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
+						<li><a target=_blank href="Annie-Bryan-Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
 					</ul>
 				</div>
