revised wording of interlock project

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 						</div>
 						<div class="row description-text">
 							<div class="col-12 justify">
-								<p>Collaborating with Toyota Research Institute to develop certified control, a new architecture for dependable self-driving cars</p>
+								<p>Collaborated with Toyota Research Institute to develop certified control, a new architecture for dependable self-driving cars.</p>
 							</div>
 						</div>
 					</div>
