set all project title row heights to 150px

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-md-3"></div>
 					<div class="col-12 col-md-6">
-						<div class="row">
+						<div class="row center height-150">
 							<div class="col-3 center">
 								<img src="images/csail.png" alt="spotify" data-position="center center" width=100%>
 							</div>
@@ -63,9 +63,9 @@
 								</ul>
 							</div>
 						</div>
-						<div class="row">
 							<div class="col-12 center">
-								<div class="buttons">
+						<div class="row center">
+								<div class="buttons center">
 									<a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
 									<a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
 									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
@@ -82,7 +82,7 @@
 				</div>
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
-						<div class="row">
+						<div class="row center height-150">
 							<div class="col-3 center">
 								<img src="images/spotify.png" alt="spotify" data-position="center center" width=100%>
 							</div>
@@ -96,9 +96,9 @@
 								</ul>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row center">
 							<div class="col-12 center">
-								<div class="buttons">
+								<div class="buttons center">
 									<a target=_blank href="https://www.youtube.com/watch?v=w7C_8jrciyQ" class="button small">Video</a>
 									<a target=_blank href="writeup.md.html" class="button small">Writeup</a>
 								</div>
@@ -111,7 +111,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
-						<div class="row">
+						<div class="row center height-150">
 							<div class="col-3 center">
 								<img src="images/covid.png" alt="spotify" data-position="center center" width=100%>
 							</div>
@@ -125,9 +125,9 @@
 								</ul>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row center">
 							<div class="col-12 center">
-								<div class="buttons">
+								<div class="buttons center">
 									<a target=_blank href="https://nbviewer.jupyter.org/github/anniebryan/covid-data-analysis/blob/master/covid-data-analysis.ipynb" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/covid-data-analysis" class="button small">Code</a>
 								</div>
@@ -142,7 +142,7 @@
 				</div>
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
-						<div class="row">
+						<div class="row center height-150">
 							<div class="col-3 center">
 								<img src="images/utensils.png" alt="utensils" data-position="center center" width=100%>
 							</div>
@@ -156,9 +156,9 @@
 								</ul>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row center">
 							<div class="col-12 center">
-								<div class="buttons">
+								<div class="buttons center">
 									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
 								</div>
@@ -171,7 +171,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-6">
-						<div class="row">
+						<div class="row center height-150">
 							<div class="col-3 center">
 								<img src="images/tetris.png" alt="tetris" data-position="center center" width=100%>
 							</div>
@@ -184,9 +184,9 @@
 								</ul>
 							</div>
 						</div>
-						<div class="row">
+						<div class="row center">
 							<div class="col-12 center">
-								<div class="buttons">
+								<div class="buttons center">
 									<a target=_blank href="https://htmlpreview.github.io/?https://github.com/anniebryan/tetris/blob/master/index.html" class="button small">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/tetris" class="button small">Code</a>
 								</div>
