--- a/index.html
+++ b/index.html
@@ -49,7 +49,37 @@
 			<!-- Projects -->
 			<section id="projects" class="wrapper style2 spotlights">
 				<div class="project row" style="margin-right: 0px;">
-					<div class="col-md-3"></div>
+          
+          <div class="col-12 col-md-6">
+            <div class="row center height-150">
+              <div class="col-3 center">
+                <img src="images/vis.png" alt="spotify" data-position="center center" width=100%>
+              </div>
+              <div class="col-9">
+                <h3>Interface for Machine Learning Interpretability</h3>
+                <ul class="tools-list">
+                  <li>React</li>
+                  <li>NLPaug</li>
+                  <li>TensorFlow</li>
+                  <li>sklearn</li>
+                </ul>
+              </div>
+            </div>
+            <div class="row center">
+              <div class="col-12 center">
+                <div class="buttons center">
+                  <a target=_blank href="http://mltesting.csail.mit.edu/" class="button small">Link</a>
+                  <a target=_blank href="http://vis.csail.mit.edu/" class="button small">About</a>
+                </div>
+              </div>
+            </div>
+            <div class="row description-text">
+              <div class="col-12 justify">
+                <p>Created a UI for users to build NLP models, define and run test cases, and visualize the results.</p>
+              </div>
+            </div>
+          </div>
+
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
 							<div class="col-3 center">
@@ -89,7 +119,6 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-md-3"></div>
 				</div>
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
