added vertical space between projects on mobile

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
 			<!-- Projects -->
 			<section id="projects" class="wrapper style2 spotlights">
 				<div class="project row" style="margin-right: 0px;">
-          
           <div class="col-12 col-md-6">
             <div class="row center height-150">
               <div class="col-3 center">
@@ -79,6 +78,8 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-6 show-mobile height-30"></div>
 
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
@@ -120,6 +121,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
@@ -150,6 +152,9 @@
 							</div>
 						</div>
 					</div>
+
+          <div class="col-md-6 show-mobile height-30"></div>
+
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
 							<div class="col-3 center">
@@ -180,6 +185,7 @@
 						</div>
 					</div>
 				</div>
+
 				<div class="project row" style="margin-right: 0px;">
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
@@ -210,6 +216,9 @@
 							</div>
 						</div>
 					</div>
+
+          <div class="col-md-6 show-mobile height-30"></div>
+          
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
 							<div class="col-3 center">
