--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<section id="about" class="wrapper style1 fullscreen fade-up">
 				<div class="inner">
 					<h1>Annie Bryan</h1>
-					<h3 id="add-margin-bottom">I am a fourth-year undergraduate at MIT studying Computer Science and Mathematical Economics.</h3>
+					<h3 id="add-margin-bottom">I'm an incoming software engineer for <a target=_blank href="https://about.facebook.com/">Meta</a> in Boston, MA. <br></br>This May, I graduated from MIT, where I double-majored in Computer Science and Mathematical Economics and played on the <a target=_blank href="https://mitathletics.com/sports/womens-volleyball/roster/annie-bryan/9290">volleyball team</a>. <br></br>In my free time, I love to crochet and play with my dog, Tucker.</h3>
 					<ul class="actions">
 						<li><a target=_blank href="Annie-Bryan-Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
