--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
 							<div class="col-3 center">
-								<img src="images/csail.png" alt="spotify" data-position="center center" width=100%>
+								<img src="images/csail.png" alt="csail" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>Interlock for Self-Driving Cars</h3>
@@ -158,7 +158,7 @@
 					<div class="col-12 col-md-6">
 						<div class="row center height-150">
 							<div class="col-3 center">
-								<img src="images/covid.png" alt="spotify" data-position="center center" width=100%>
+								<img src="images/covid.png" alt="covid" data-position="center center" width=100%>
 							</div>
 							<div class="col-9">
 								<h3>COVID-19 Data Analysis</h3>
