--- a/index.html
+++ b/index.html
@@ -156,13 +156,13 @@
 									<a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
 								</div>
 							</div>
-              <div class="col-md-12 center show-mobile margin-bottom-16">
+              <div class="col-12 center show-mobile margin-bottom-16">
                 <div class="buttons center">
                   <a target=_blank href="https://www.csail.mit.edu/research/interlock-self-driving-cars" class="button small">Link</a>
                   <a target=_blank href="https://github.com/interlock-mit/interlock" class="button small">Code</a>
                 </div>
               </div>
-              <div class="col-md-12 center show-mobile">
+              <div class="col-12 center show-mobile">
                 <div class="buttons center">
                   <a target=_blank href="interlock.mp4" class="button small remove-margin">Video</a>
                 </div>
