Added skills to math paper

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
               </div>
               <div class="col-9">
                 <h3>Survey of Cryptographic Developments</h3>
+                <ul class="tools-list">
+                  <li>RSA</li>
+                  <li>ECC</li>
+                  <li>Quantum Computing</li>
+                </ul>
               </div>
             </div>
             <div class="row center">
