Disabled demo button for recipe app since no longer hosted

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 						<div class="row center">
 							<div class="col-12 center">
 								<div class="buttons center">
-									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small">Demo</a>
+									<a target=_blank href="https://recipe-saver-app.herokuapp.com/" class="button small disabled">Demo</a>
 									<a target=_blank href="https://github.com/anniebryan/recipe-saver" class="button small">Code</a>
 								</div>
 							</div>
