Added wordle solver project

--- a/index.html
+++ b/index.html
@@ -49,6 +49,36 @@
 			<!-- Projects -->
 			<section id="projects" class="wrapper style2 spotlights">
         <div class="project row" style="margin-right: 0px;">
+          <div class="col-md-3 hide-mobile"></div>
+          <div class="col-12 col-md-6">
+            <div class="row center height-150">
+              <div class="col-3 center">
+                <img src="images/wordle.png" alt="wordle" data-position="center center" width="100%">
+              </div>
+              <div class="col-9">
+                <h3>Wordle Solver</h3>
+                <ul class="tools-list">
+                  <li>Python</li>
+                </ul>
+              </div>
+            </div>
+            <div class="row center">
+              <div class="col-12 center">
+                <div class="buttons center">
+                  <a target=_blank href="https://github.com/anniebryan/wordle-solver" class="button small">Code</a>
+                </div>
+              </div>
+            </div>
+            <div class="row description-text">
+              <div class="col-12 justify">
+                <p>An interactive python script that processes wordle guesses and outputs the best words to guess next.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3 hide-mobile"></div>
+        </div>
+
+        <div class="project row" style="margin-right: 0px;">
           <div class="col-12 col-md-6">
             <div class="row center height-150">
               <div class="col-3 center">
