--- a/index.html
+++ b/index.html
@@ -449,12 +449,12 @@
 						<section>
 							<ul class="contact">
 								<li>
-									<a href="mailto:annieb22@mit.edu">annieb22@mit.edu</a>
+									<a href="mailto:anniebryan@alum.mit.edu">anniebryan@alum.mit.edu</a>
 									<ul class="icons">
 										<li><a target=_blank href="https://github.com/anniebryan" class="icon brands fa-2x fa-github"><span class="label">GitHub</span></a></li>
 										<li><a target=_blank href="https://stackoverflow.com/story/anniebryan" class="icon brands fa-2x fa-stack-overflow"><span class="label">Stack Overflow</span></a></li>
 										<li><a target=_blank href="https://www.linkedin.com/in/annie-bryan/" class="icon brands fa-2x fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="mailto:annieb22@mit.edu" class="icon fa-2x fa-envelope"><span class="label">annieb22@mit.edu</span></a></li>
+										<li><a href="mailto:anniebryan@alum.mit.edu" class="icon fa-2x fa-envelope"><span class="label">annieb22@mit.edu</span></a></li>
 									</ul>
 								</li>
 							</ul>
