--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					<ul class="actions">
 						<li><a target=_blank href="files/Annie-Bryan-Resume.pdf" class="primary button">Resume <i class="fa fa-download" aria-hidden="true"></i></a></li>
 						<li><a href="#projects" class="primary button scrolly">Projects</a></li>
+            <li><a href="/swe-interview-prep-course/" class="primary button">SWE Interview Prep Course</a></li>
 					</ul>
 				</div>
 			</section>
