reusable header and tutoring components

--- a/swe-interview-prep-course/tutoring.html
+++ b/swe-interview-prep-course/tutoring.html
@@ -17,41 +17,11 @@
   <script async src='https://d33wubrfki0l68.cloudfront.net/bundles/b5975b78fdc2f6b186ff2607bcc7827fa767d566.js'></script>
   <script defer src='https://d33wubrfki0l68.cloudfront.net/bundles/1066bc339a3beded5f6c4279870b406c047460fe.js'></script>
   <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
+  <script src="/assets/js/components.js"></script>
 </head>
 
 <body data-spy="scroll" data-target="#toc">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mdg-nav">
-    <div class="container">
-      <a class="navbar-brand" href="/swe-interview-prep-course/" style="margin-top: 2px; margin-bottom: 3px">
-        SWE Interview Prep Course
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="margin-top: 2px">
-        <div class="navbar-nav">
-          <div class="dropdown">
-            <button class="dropbtn">
-              <a class="nav-item nav-link" href="/swe-interview-prep-course/content/">
-                Content
-                <i class="fa fa-caret-down"></i>
-              </a>
-            </button>
-            <div class="dropdown-content">
-              <a href="/swe-interview-prep-course/content/complexity.html">Complexity</a>
-              <a href="/swe-interview-prep-course/content/sorting.html">Sorting</a>
-              <a href="/swe-interview-prep-course/content/data-structures.html">Data Structures</a>
-              <a href="/swe-interview-prep-course/content/graph-algorithms.html">Graph Algorithms</a>
-              <a href="/swe-interview-prep-course/content/dynamic-programming.html">Dynamic Programming</a>
-            </div>
-          </div>
-          <a class="nav-item nav-link" href="/swe-interview-prep-course/practice-problems/">Practice Problems</a>
-          <a class="nav-item nav-link" href="/swe-interview-prep-course/tutoring.html">Tutoring</a>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <header-component></header-component>
 
   <div class="container">
     <div class="row row-offcanvas row-offcanvas-right">
