add link to course at bottom of main page

--- a/swe-interview-prep-course/index.html
+++ b/swe-interview-prep-course/index.html
@@ -166,6 +166,18 @@
 
         <tutoring-component></tutoring-component>
 
+        <h2 id="start">Let's start!</h2>
+
+        <p>Ready to start? Click on any of the links below to begin learning.</p>
+
+        <ol>
+          <li><a href="/content/complexity.html">Complexity</a></li>
+          <li><a href="/content/sorting.html">Sorting</a></li>
+          <li><a href="/content/data-structures.html">Data Structures</a></li>
+          <li><a href="/content/graph-algorithms">Graph Algorithms</a></li>
+          <li><a href="/content/dynamic-programming">Dynamic Programming</a></li>
+        </ol>
+
       </div>
       <div class="col-md-3 d-none d-md-block" id="sidebar">
         <nav id="toc" data-toggle="toc" class="sticky-top" style="z-index:1"></nav>
