reusable jumbotron component

--- a/swe-interview-prep-course/content/complexity.html
+++ b/swe-interview-prep-course/content/complexity.html
@@ -23,12 +23,11 @@
 <body data-spy="scroll" data-target="#toc">
   <header-component></header-component>
 
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="no-anchor" data-toc-skip>Complexity</h1>
-      <p></p>
-    </div>
-  </div>
+  <jumbotron-component
+    title="Complexity"
+    description="">
+  </jumbotron-component>
+
   <div class="container">
     <div class="row row-offcanvas row-offcanvas-right">
       <div class="col-xs-12 col-sm-12 col-md-9">
