--- a/swe-interview-prep-course/index.html
+++ b/swe-interview-prep-course/index.html
@@ -17,18 +17,17 @@
   <script async src='https://d33wubrfki0l68.cloudfront.net/bundles/b5975b78fdc2f6b186ff2607bcc7827fa767d566.js'></script>
   <script defer src='https://d33wubrfki0l68.cloudfront.net/bundles/1066bc339a3beded5f6c4279870b406c047460fe.js'></script>
   <script async src="https://media.ethicalads.io/media/client/ethicalads.min.js"></script>
-  <script src="/assets/js/components.js"></script>
+  <script src="../assets/js/components.js"></script>
 </head>
 
 <body data-spy="scroll" data-target="#toc">
   <header-component></header-component>
 
-  <div class="jumbotron">
-    <div class="container">
-      <h1 class="no-anchor" data-toc-skip>Getting Started</h1>
-      <p>A bit about myself, this course, and how it can help you.</p>
-    </div>
-  </div>
+  <jumbotron-component
+    title="Getting Started"
+    description="A bit about myself, this course, and how it can help you">
+  </jumbotron-component>
+
   <div class="container">
     <div class="row row-offcanvas row-offcanvas-right">
       <div class="col-xs-12 col-sm-12 col-md-9">
