--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
 
 					<!-- Wordle Solver -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/wordle.png" alt="wordle" data-position="center center" width="100%">
+								<div class="img-container">
+									<img src="images/wordle.png" alt="wordle" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Wordle Solver</h3>
@@ -85,9 +87,11 @@
 
 					<!-- Effects of Access to Recreational Cannabis on Home Values -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/stata.png" alt="stata" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/stata.png" alt="stata" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Effects of Access to Recreational Cannabis on Home Values</h3>
@@ -115,9 +119,11 @@
 
 					<!-- Survey of Cryptographic Developments -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/crypto.png" alt="crypto" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/crypto.png" alt="crypto" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Survey of Cryptographic Developments</h3>
@@ -147,9 +153,11 @@
 
 					<!-- Interface for ML Interpretability -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/vis.png" alt="spotify" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/vis.png" alt="spotify" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Interface for Machine Learning Interpretability</h3>
@@ -180,9 +188,11 @@
 
 					<!-- Interlock for Self-Driving Cars -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/csail.png" alt="csail" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/csail.png" alt="csail" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Interlock for Self-Driving Cars</h3>
@@ -224,9 +234,11 @@
 
 					<!-- Tempo -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/spotify.png" alt="spotify" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/spotify.png" alt="spotify" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Tempo</h3>
@@ -257,9 +269,11 @@
 
 					<!-- Covid Data Analysis -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/covid.png" alt="covid" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/covid.png" alt="covid" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>COVID-19 Data Analysis</h3>
@@ -291,9 +305,11 @@
 
 					<!-- Recipe Saver -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/utensils.png" alt="utensils" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/utensils.png" alt="utensils" data-position="center center" height="150px">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Recipe Saver</h3>
@@ -324,9 +340,11 @@
 
 					<!-- Tetris -->
 					<div class="col-12 col-md-6">
-						<div class="row center height-150">
+						<div class="row center height-250">
 							<div class="col-3 center">
-								<img src="images/tetris.png" alt="tetris" data-position="center center" width=100%>
+								<div class="img-container">
+									<img src="images/tetris.png" alt="tetris" data-position="center center">
+								</div>
 							</div>
 							<div class="col-9">
 								<h3>Tetris</h3>
